# learning-eval-llm-lab

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md
eval_lab/: __init__.py  cli.py  config.py  run.py
eval_lab/api/: __init__.py  __main__.py  app.py
eval_lab/configs/: __init__.py  example_eval.yaml  example_model.yaml
eval_lab/dashboards/: __init__.py
eval_lab/datasets/: __init__.py  base.py  builtin.py  registry.py  task_adapter.py
eval_lab/datasets/tasks/: __init__.py  hallucination.py  instruction_following.py  reasoning.py  summarization.py
eval_lab/metrics/: __init__.py  base.py  exact_match.py  f1.py  latency.py  llm_judge.py
eval_lab/models/: __init__.py  base.py  huggingface_adapter.py  openai_adapter.py  vllm_adapter.py
eval_lab/reporting/: __init__.py  comparison_report.py  report_generator.py  slice_analysis.py
eval_lab/reporting/templates/: comparison.html  report.html
eval_lab/runners/: __init__.py  async_runner.py
eval_lab/storage/: __init__.py  async_store.py  base.py  store.py  types.py
scripts/: compare_models.py  run_eval.py  visualize.py
tests/: __init__.py  conftest.py  test_api.py  test_datasets.py  test_metrics.py  test_runner.py
